- improved code display, fixed navigation font wrap

--- a/style.scss
+++ b/style.scss
@@ -46,6 +46,11 @@ h2 {
   line-height: 38px;
 }
 
+pre {
+  clear: both;
+  box-sizing: border-box;
+}
+
 code, code span {
   font-size: 15px;
   font-family: monospace;
@@ -150,6 +155,7 @@ nav {
 
   li {
     background-color: $backgroundColor;
+    overflow: hidden;
   }
 
   a {
@@ -211,6 +217,7 @@ main {
 
   img {
     margin: 10px 0;
+    max-width: 100%;
   }
 
   img.alignleft {
@@ -274,16 +281,12 @@ html.minimized-navigation {
       transition: width 0.2s;
       &:hover {
         width: $menuWidthFullSize;
-        span {
-          width: auto;
-          display: inline;
-        }
       }
     }
     span {
-      width: 0;
-      overflow: hidden;
-      display: inline-block;
+      height: 40px;
+      line-height: 40px;
+      display: block;
     }
   }
 }
@@ -387,17 +390,18 @@ html.no-navigation {
       width: 100%;
     }
     a {
-      padding-left: $menuIconSizeMobile + 10;
+      padding-left: $menuIconSizeMobile + 50;
       &:before {
         background-size: $menuIconSizeMobile;
         width: $menuIconSizeMobile;
+        left: 25px;
       }
     }
     span {
       width: auto;
       display: inline;
-      font-size: 90px;
-      line-height: 140px;
+      font-size: 70px;
+      line-height: 90px;
     }
   }
 
